feat(specs): userstats, prstats, Patch teams - deactivate
